Refactored slightly and now uses protocol buffers
Signed-off-by: Brendan Annable <brendan.annable@uon.edu.au>

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
         <script type="text/javascript" src="/javascripts/app.js"></script>
         <script type="text/javascript" src="/javascripts/ThreeJS_Sencha/ThreeJS.js"></script>
         <script type="text/javascript" src="/javascripts/NUbugger.js"></script>
+        <script type="text/javascript" src="/javascripts/base64-binary.js"></script>
         <script type="text/javascript" src="/javascripts/protobuf.js"></script>
         <script type="text/javascript" src="/javascripts/pbj.js"></script>
         <script type="text/javascript" src="/javascripts/proto/NUAPI.proto.js"></script>
