Added var display
Signed-off-by: Brendan Annable <brendan.annable@uon.edu.au>

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
         <script type="text/javascript" src="/javascripts/Modeler.js"></script>
         <script type="text/javascript" src="/javascripts/components/Circle.js"></script>
         <script type="text/javascript" src="/javascripts/components/LocalisationVisualiser.js"></script>
+        <script type="text/javascript" src="/javascripts/components/BehaviourVisualiser.js"></script>
         <script type="text/javascript" src="/javascripts/components/DarwinOP.js"></script>
         <script type="text/javascript" src="/javascripts/components/Field.js"></script>
         <script type="text/javascript" src="/javascripts/components/Ball.js"></script>
