Added charting library.
Signed-off-by: Brendan Annable <brendan.annable@uon.edu.au>

--- a/public/index.html
+++ b/public/index.html
@@ -32,12 +32,15 @@
         <script type="text/javascript" src="/javascripts/lib/NU_Sencha/Network.js"></script>
         <script type="text/javascript" src="/javascripts/lib/NU_Sencha/DisplayWindow.js"></script>
         <script type="text/javascript" src="/javascripts/lib/NU_Sencha/VisionWindow.js"></script>
+        <script type="text/javascript" src="/javascripts/lib/NU_Sencha/ChartWindow.js"></script>
         <script type="text/javascript" src="/javascripts/lib/NU_Sencha/FieldWindow.js"></script>
         <script type="text/javascript" src="/javascripts/lib/NU_Sencha/FieldWindow/Robot.js"></script>
         <script type="text/javascript" src="/javascripts/NUbugger.js"></script>
         <script type="text/javascript" src="/javascripts/lib/base64-binary.js"></script>
         <script type="text/javascript" src="/javascripts/lib/protobuf.js"></script>
         <script type="text/javascript" src="/javascripts/lib/pbj.js"></script>
+        <!--<script type="text/javascript" src="/javascripts/lib/webgl-2d.js"></script>-->
+        <script type="text/javascript" src="/javascripts/lib/smoothie.js"></script>
         <script type="text/javascript" src="/javascripts/proto/NUAPI.proto.js"></script>
     </head>
     <body>
